kustomize_minio/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
spec:
  selector:
    app: minio
  # ports:
  #   - name: http
  #     port: 9000
  #     targetPort: 9000
  #   - name: console
  #     port: 9001
  #     targetPort: 9001
  ports:
    - name: http
      port: 9000       # ★外部からアクセスされるポート（Routeがこの番号で期待する）
      targetPort: 9000   # ★コンテナ内部のMinIOがListenしているポート
    - name: console
      port: 9001
      targetPort: 9001
  type: ClusterIP
    # - name: console
    #   port: 9001
    #   targetPort: 9001
