kustomize_minio/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: minio
spec:
  to:
    kind: Service
    name: minio
  port:
    targetPort: console
  tls: null
  #   termination: edge
